--- a/index.html
+++ b/index.html
@@ -3,35 +3,48 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>S.T.E.P Guardian Monitoring</title>
+<title>S.T.E.P Guardian — Realtime Tracker</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
-body{margin:0;font-family:'Poppins',sans-serif;background:#0d0d0d;color:#eee;}
-#map{height:100vh;width:100%;}
-.info-panel{
-  position:absolute;top:10px;left:10px;width:320px;background:rgba(20,20,20,0.9);
-  padding:20px;border-radius:15px;z-index:1000;box-shadow:0 0 25px #FFD40080;backdrop-filter:blur(6px);
+body{
+  margin:0;
+  font-family:'Poppins',sans-serif;
+  background:radial-gradient(circle at top,#0a0a0a,#000);
+  color:#fff;
+  overflow:hidden;
 }
-.info-panel h2{text-align:center;margin-bottom:10px;color:#FFD400;text-shadow:0 0 5px #FFD400;}
-.info-row{display:flex;justify-content:space-between;margin-bottom:8px;font-size:16px;}
-.status-pill{padding:8px;border-radius:10px;font-weight:700;text-align:center;transition:0.3s;}
+#map{height:100vh;width:100%;}
+
+/* info panel */
+.info-panel{
+  position:absolute;top:10px;left:10px;width:320px;
+  background:rgba(25,25,25,0.9);padding:20px;border-radius:15px;
+  z-index:1000;backdrop-filter:blur(10px);
+  box-shadow:0 0 25px #FFD400;
+}
+.info-panel h2{text-align:center;color:#FFD400;margin-bottom:12px;font-size:22px;}
+.info-row{display:flex;justify-content:space-between;margin:6px 0;font-size:15px;}
+.status-pill{padding:8px 10px;border-radius:10px;font-weight:700;text-align:center;}
 .safe{background:#4CAF50;color:#000;}
 .warning{background:#FFC107;color:#000;}
 .alert{background:#ff4d4d;color:#000;}
-#centerBtn{margin-top:10px;width:100%;padding:10px;border:none;background:#FFD400;color:#000;
-font-weight:700;border-radius:8px;cursor:pointer;transition:0.3s;}
-#centerBtn:hover{background:#ffe44d;box-shadow:0 0 10px #FFD400;}
+.battery{background:#333;border-radius:10px;height:10px;overflow:hidden;margin-top:4px;}
+.battery-fill{height:100%;background:#4CAF50;width:100%;transition:width 0.5s;}
+#centerBtn{margin-top:15px;width:100%;padding:10px;border:none;background:#FFD400;
+  color:#000;font-weight:700;border-radius:10px;cursor:pointer;transition:0.3s;}
+#centerBtn:hover{background:#ffe44d;transform:scale(1.05);}
 </style>
 </head>
 <body>
 <div id="map"></div>
 <div class="info-panel">
-  <h2>STEP Guardian</h2>
+  <h2>👟 STEP Guardian</h2>
   <div class="info-row">Latitude: <span id="lat">—</span></div>
   <div class="info-row">Longitude: <span id="lng">—</span></div>
   <div class="info-row">Distance: <span id="distance">—</span> cm</div>
-  <div class="info-row">Battery: <span id="battery">—</span>%</div>
+  <div class="info-row">Battery: <span id="battery">—</span> V</div>
+  <div class="battery"><div id="batteryFill" class="battery-fill"></div></div>
   <div class="info-row">Status: <span id="status" class="status-pill safe">Safe</span></div>
   <button id="centerBtn">📍 Center Map</button>
 </div>
@@ -41,83 +54,92 @@ font-weight:700;border-radius:8px;cursor:pointer;transition:0.3s;}
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 <script>
 // Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
-  authDomain: "step-gps-tracker.firebaseapp.com",
-  databaseURL: "https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "step-gps-tracker",
-  storageBucket: "step-gps-tracker.firebasestorage.app",
-  messagingSenderId: "637274580153",
-  appId: "1:637274580153:web:7566f774dbf5ea4380a768"
+const firebaseConfig={
+  apiKey:"AIzaSyCEPsPPxprCkb70JAre73vo0jo3YA6uZQ4",
+  authDomain:"step-gps-tracker.firebaseapp.com",
+  databaseURL:"https://step-gps-tracker-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId:"step-gps-tracker",
+  storageBucket:"step-gps-tracker.firebasestorage.app",
+  messagingSenderId:"637274580153",
+  appId:"1:637274580153:web:7566f774dbf5ea4380a768"
 };
 firebase.initializeApp(firebaseConfig);
 const db=firebase.database();
 
-// Map setup
-const defaultLat=14.311, defaultLng=121.164;
-const map=L.map('map').setView([defaultLat,defaultLng],17);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{maxZoom:19,attribution:'© OpenStreetMap'}).addTo(map);
+// MAP setup
+const map=L.map('map').setView([14.0,121.0],16);
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+ {maxZoom:19,attribution:'© OpenStreetMap'}).addTo(map);
 
-// Shoe icon (no box)
-const shoeIcon=L.icon({
-  iconUrl:'https://cdn-icons-png.flaticon.com/512/3163/3163478.png',
-  iconSize:[40,40],
-  iconAnchor:[20,20]
+// Custom Shoe + Radar icon
+const shoeHTML=`
+<div style="
+  position:relative;width:70px;height:70px;display:flex;align-items:center;justify-content:center;">
+  <div class='pulse'></div>
+  <img src='https://cdn-icons-png.flaticon.com/512/616/616408.png' 
+       style='width:40px;height:40px;z-index:2;'>
+</div>`;
+const shoeIcon=L.divIcon({
+  html:shoeHTML,
+  className:'',
+  iconSize:[70,70],
+  iconAnchor:[35,35]
 });
 
-let marker=L.marker([defaultLat,defaultLng],{icon:shoeIcon}).addTo(map);
-let pathCoords=[], pathLine=L.polyline(pathCoords,{color:'#FFD400',weight:4,opacity:0.8}).addTo(map);
+// Radar animation
+const style=document.createElement('style');
+style.innerHTML=`
+@keyframes radarPulse {
+  0% {transform:scale(0.2);opacity:0.8;}
+  70% {transform:scale(2.5);opacity:0;}
+  100% {opacity:0;}
+}
+.pulse {
+  position:absolute;width:20px;height:20px;border-radius:50%;
+  background:rgba(255,212,0,0.4);
+  animation:radarPulse 2s infinite;
+}
+`;
+document.head.appendChild(style);
 
-// HTML elements
+let marker=L.marker([14.0,121.0],{icon:shoeIcon}).addTo(map);
+let path=L.polyline([], {color:'#FFD400',weight:4,opacity:0.8}).addTo(map);
+
+// Elements
 const latEl=document.getElementById('lat');
 const lngEl=document.getElementById('lng');
 const distanceEl=document.getElementById('distance');
 const batteryEl=document.getElementById('battery');
+const batteryFill=document.getElementById('batteryFill');
 const statusEl=document.getElementById('status');
-document.getElementById('centerBtn').addEventListener('click',()=>map.panTo(marker.getLatLng()));
+document.getElementById('centerBtn').onclick=()=>map.panTo(marker.getLatLng());
 
-// Realtime Firebase listener
+// Realtime update from Firebase
 db.ref('shoe').on('value',snap=>{
-  const d=snap.val(); if(!d) return;
-  const lat=d.latitude||defaultLat;
-  const lng=d.longitude||defaultLng;
-  let dist=d.distance;
-  let batt=d.battery||0;
+  const data=snap.val(); if(!data) return;
+  const lat=data.latitude||0,lng=data.longitude||0,dist=data.distance||0,batt=data.battery||0;
 
-  // Default safe distance if invalid
-  if(dist<0 || dist>500) dist=200;
+  // update map
+  marker.setLatLng([lat,lng]);
+  path.addLatLng([lat,lng]);
+  map.panTo([lat,lng],{animate:true,duration:1});
 
-  // Update info
+  // update panel
   latEl.textContent=lat.toFixed(6);
   lngEl.textContent=lng.toFixed(6);
   distanceEl.textContent=dist.toFixed(1);
-  batteryEl.textContent=batt.toFixed(0);
+  batteryEl.textContent=batt.toFixed(2);
 
-  // Battery color
-  if(batt<=20) batteryEl.style.color="#ff4d4d";
-  else if(batt<=50) batteryEl.style.color="#FFD400";
-  else batteryEl.style.color="#4CAF50";
+  // battery bar
+  let battPercent=Math.min(Math.max((batt-3.2)/0.6*100,0),100);
+  batteryFill.style.width=battPercent+'%';
+  batteryFill.style.background=battPercent<20?'#ff4d4d':battPercent<50?'#FFC107':'#4CAF50';
 
-  // Marker + Path
-  marker.setLatLng([lat,lng]);
-  map.panTo([lat,lng]);
-  pathCoords.push([lat,lng]);
-  if(pathCoords.length>150) pathCoords.shift();
-  pathLine.setLatLngs(pathCoords);
-
-  // Status logic
-  if(dist>=150){
-    statusEl.textContent="✅ Safe";
-    statusEl.className='status-pill safe';
-  }else if(dist>=30 && dist<150){
-    statusEl.textContent="🟡 Warning";
-    statusEl.className='status-pill warning';
-  }else{
-    statusEl.textContent="🔴 Danger!";
-    statusEl.className='status-pill alert';
-  }
+  // fuzzy logic status
+  if(dist>=150){statusEl.textContent="✅ Safe";statusEl.className='status-pill safe';}
+  else if(dist>=30 && dist<150){statusEl.textContent="🟡 Mild Warning";statusEl.className='status-pill warning';}
+  else{statusEl.textContent="🔴 Danger Zone";statusEl.className='status-pill alert';}
 });
-setTimeout(()=>map.invalidateSize(),100);
 </script>
 </body>
 </html>
