--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>S.T.E.P Guardian — Realtime Tracker</title>
+<title>S.T.E.P Guardian — Realtime Radar Tracker</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <style>
 body{
   margin:0;
   font-family:'Poppins',sans-serif;
-  background:radial-gradient(circle at top,#0a0a0a,#000);
+  background:radial-gradient(circle at center,#000,#090909);
   color:#fff;
   overflow:hidden;
 }
@@ -44,15 +44,40 @@ body{
   font-weight:700;border-radius:10px;
   cursor:pointer;transition:0.3s;
 }
-#centerBtn:hover{
-  background:#ffe44d;transform:scale(1.05);
+#centerBtn:hover{background:#fff34d;transform:scale(1.05);}
+
+/* Radar Animation */
+@keyframes radarPulse {
+  0% {transform:scale(0.2);opacity:0.7;}
+  70% {transform:scale(2.8);opacity:0;}
+  100% {opacity:0;}
+}
+@keyframes radarSweep {
+  0% {transform:rotate(0deg);}
+  100% {transform:rotate(360deg);}
+}
+.pulse {
+  position:absolute;
+  width:30px;height:30px;border-radius:50%;
+  background:rgba(255,212,0,0.3);
+  animation:radarPulse 2.2s infinite;
+}
+.sweep {
+  position:absolute;
+  width:100px;height:100px;
+  border-top:2px solid rgba(255,212,0,0.5);
+  border-right:2px solid transparent;
+  border-radius:50%;
+  animation:radarSweep 3s linear infinite;
+  transform-origin:center;
 }
 </style>
 </head>
 <body>
 <div id="map"></div>
+
 <div class="info-panel">
-  <h2>👨‍🦯 STEP Guardian</h2>
+  <h2>🩴 STEP Guardian</h2>
   <div class="info-row">Latitude: <span id="lat">—</span></div>
   <div class="info-row">Longitude: <span id="lng">—</span></div>
   <div class="info-row">Distance: <span id="distance">—</span> cm</div>
@@ -82,37 +107,22 @@ const map=L.map('map').setView([14.0,121.0],16);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
  {maxZoom:19,attribution:'© OpenStreetMap'}).addTo(map);
 
-// Blind person icon + radar
-const personHTML=`
-<div style="position:relative;width:70px;height:70px;display:flex;align-items:center;justify-content:center;">
+// Shoe icon + radar
+const shoeHTML=`
+<div style="position:relative;width:80px;height:80px;display:flex;align-items:center;justify-content:center;">
   <div class="pulse"></div>
-  <img src="https://cdn-icons-png.flaticon.com/512/4140/4140048.png" 
-       style="width:40px;height:40px;z-index:2;">
+  <div class="sweep"></div>
+  <img src="https://cdn-icons-png.flaticon.com/512/809/809514.png" 
+       style="width:45px;height:45px;z-index:2;filter:drop-shadow(0 0 10px #FFD400);">
 </div>`;
-const personIcon=L.divIcon({
-  html:personHTML,
+const shoeIcon=L.divIcon({
+  html:shoeHTML,
   className:'',
-  iconSize:[70,70],
-  iconAnchor:[35,35]
+  iconSize:[80,80],
+  iconAnchor:[40,40]
 });
 
-// Radar animation
-const style=document.createElement('style');
-style.innerHTML=`
-@keyframes radarPulse {
-  0% {transform:scale(0.2);opacity:0.8;}
-  70% {transform:scale(2.5);opacity:0;}
-  100% {opacity:0;}
-}
-.pulse {
-  position:absolute;width:25px;height:25px;border-radius:50%;
-  background:rgba(255,212,0,0.4);
-  animation:radarPulse 2s infinite;
-}
-`;
-document.head.appendChild(style);
-
-let marker=L.marker([14.0,121.0],{icon:personIcon}).addTo(map);
+let marker=L.marker([14.0,121.0],{icon:shoeIcon}).addTo(map);
 let path=L.polyline([], {color:'#FFD400',weight:4,opacity:0.8}).addTo(map);
 
 // Elements
@@ -138,7 +148,7 @@ db.ref('shoe').on('value',snap=>{
   lngEl.textContent=lng.toFixed(6);
   distanceEl.textContent=dist>0?dist.toFixed(1):'—';
 
-  // Fuzzy logic display
+  // Distance logic
   if(dist<0 || dist>=150){
     statusEl.textContent="✅ Safe";
     statusEl.className='status-pill safe';
